# LLP-tank-wars

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  .travis.cache  .travis.yml  CMakeLists.txt  GRADING.md  README.md
Docs/: Demo Video Link.txt
Documentation/: 2020-03-28-input-system.md  2020-03-31-gameplay.md  2020-04-20-final-week.md  2020-04-30-post-mortem.md  Game Flow.drawio  Peer Weighting.txt
apps/: CMakeLists.txt
apps/ASGEGame/: ASGEGame.cpp  ASGEGame.hpp  main.cpp
apps/Dedicated/: GameServer.cpp  GameServer.hpp  main.cpp
apps/data/: MAP_LAYOUT - Copy.json  MAP_LAYOUT.json  MapTileTypes - Copy.json  MapTileTypes.json
cmake/libs/: asge.cmake  json.cmake  netlib.cmake  soloud.cmake
cmake/tools/: cargo.cmake  clang-format.cmake  clang-tidy.cmake  cppcheck.cmake  itch.io.cmake
docs/: _config.yml
docs/_posts/: 2020-03-06-brief.md  2020-03-07-planning.md  2020-03-09-project-architecture.md  2020-03-12-setting-up-networking.md  2020-03-17-ui_system.md  2020-03-23-map-setup.md  2020-03-27-more-networking.md  2020-04-11-gameplay.md  2020-04-20-final-week.md  2020-04-30-post-mortem.md
include/Map/: TileData.h
include/gamelib/: ActionStructs.h  DataStates.h  DataStructs.h  GCNetClient.hpp  GCNetServer.hpp  GameComponent.hpp  GameObject.h  Input.h  InputData.h  InputManager.h  Map.h  MessageTypes.h  SpriteComponent.h  TileData.h  Troop.h  TroopComponent.h
include/gamelib/Audio/: AudioManager.h
include/gamelib/Map/: Map.h  TileData.h
include/gamelib/components/: GCNetClient.hpp  GCNetServer.hpp  GameComponent.hpp  GameObject.h  SpriteComponent.h  TroopComponent.h
include/gamelib/gamedata/: DataComp.h  DataStates.h  DataStructs.h  MessageTypes.h  TroopData.h
include/gamelib/map/: Map.h
include/gamelib/ui/: Button.h  SceneManager.h  UIElement.h
include/gamelib/ui/scenes/: GameOverScreen.h  GameScreen.h  JoinScreen.h  Lobby.h  MainMenu.h  Shop.h
include/gamelib/ui/ui_elements/: Button.h  TextBox.h  UIElement.h
source/: CMakeLists.txt  Input.cpp  InputManager.cpp  Map.cpp  Troop.cpp
source/Audio/: AudioManager.cpp
source/components/: DataComp.cpp  GCNetClient.cpp  GCNetServer.cpp  GameObject.cpp  SpriteComponent.cpp  TroopComponent.cpp  TroopData.cpp
source/map/: Map.cpp
source/ui/: Button.cpp  SceneManager.cpp  UIElement.cpp
source/ui/scenes/: GameOverScreen.cpp  GameScreen.cpp  JoinScreen.cpp  Lobby.cpp  MainMenu.cpp  Shop.cpp
source/ui/ui_elements/: Button.cpp  TextBox.cpp  UIElement.cpp
tools/cppcheck/: wxwidgets.cfg
